Update PR as per Kris's comment
- User full name and username is added to the mobile menu
- This is styled the same way as content of drop down menu

--- a/seumich/static/styles/main.scss
+++ b/seumich/static/styles/main.scss
@@ -50,6 +50,11 @@ a {
 .dropdown-menu p {
     padding: 3px $primary-padding;
 }
+.mobile-nav-right {
+    padding: 10px 15px;
+    margin-bottom: 0;
+    color: $color_star_dust_approx;
+}
 .policy-warning {
     background-color: $color_pink_approx;
 }
