--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -48,7 +48,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
-                            <li class="dropdown visible-md visible-lg">
+                            <li class="dropdown hidden-xs">
                                 <a class="dropdown-toggle" aria-label="expand for logout" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="">{{user.username}}
                                     <span class="caret"></span>
                                 </a>
@@ -65,7 +65,14 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="visible-xs visible-sm">
+                            <li class="visible-xs">
+                                <p class="mobile-nav-right">
+                                    <strong>{{user.first_name}}
+                                        {{user.last_name}}
+                                        ({{user.username}})</strong>
+                                </p>
+                            </li>
+                            <li class="visible-xs">
                                 <a href="{% url 'auth_logout' %}">Logout</a>
                             </li>
                         {% else %}
