Implement a class site interface
- Display a list of class sites
- Display a list of students corresponding to a selected class site

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -48,6 +48,9 @@
                         <li>
                             <a href="/cohorts/" data-toggle="collapse" data-target="#navbar.in">Cohorts</a>
                         </li>
+                        <li>
+                            <a href="/classes/" data-toggle="collapse" data-target="#navbar.in">Classes</a>
+                        </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
