--- a/seumich/static/styles/main.scss
+++ b/seumich/static/styles/main.scss
@@ -388,8 +388,48 @@ th[scope="row"] {
     }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,
+    .navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        position: relative;
+        top: 0;
+        border-width: 0 0 1px;
+        margin-top: -50px;
+    }
+    .navbar-fixed-bottom {
+        position: relative;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+        > li {
+            float: none;
+            > a {
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+        }
+    }
+    .collapse.in {
+        display: block !important;
+    }
     #student-search {
-        width: auto;
+        width: 22em;
     }
 }
 @media screen and (max-width: 600px) {
