--- a/seumich/templates/seumich/class_list.html
+++ b/seumich/templates/seumich/class_list.html
@@ -25,65 +25,7 @@
             </table>
         </div>
 
-        {% if classes.paginator.num_pages > 1 %}
-            <div class="text-center">
-                <ul class="pagination">
-                    <li class="page-item {% if not classes.has_previous %} disabled {% endif %}">
-                        {% if query_user %}
-                            <a class="page-link" href='{% if classes.has_previous %}?search={{query_user}}&amp;page=1{% endif %}' aria-label="First">&laquo; First</a>
-                        {% else %}
-                            <a class="page-link" href='{% if classes.has_previous %}?page=1{% endif %}' aria-label="First">&laquo; First</a>
-                        {% endif %}
-                    </li>
-                    <li class="page-item {% if not classes.has_previous %} disabled {% endif %}">
-                        {% if query_user %}
-                            <a class="page-link" href='{% if classes.has_previous %}?search={{query_user}}&amp;page={{classes.previous_page_number}}{% endif %}' aria-label="Previous">&lsaquo; Previous</a>
-                        {% else %}
-                            <a class="page-link" href='{% if classes.has_previous %}?page={{classes.previous_page_number}}{% endif %}' aria-label="Previous">&lsaquo; Previous</a>
-                        {% endif %}
-                    </li>
-                    {% for page_num in loop_times %}
-                        {% if page_num == classes.number %}
-                            {% if query_user %}
-                                <li class="page-item active">
-                                    <a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a>
-                                </li>
-                            {% else %}
-                                <li class="page-item active">
-                                    <a class="page-link" href='?page={{page_num}}'>{{page_num}}</a>
-                                </li>
-                            {% endif %}
-                        {% else %}
-                            {% if page_num <= classes.paginator.num_pages %}
-                                {% if query_user %}
-                                    <li class="page-item">
-                                        <a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a>
-                                    </li>
-                                {% else %}
-                                    <li class="page-item">
-                                        <a class="page-link" href='?page={{page_num}}'>{{page_num}}</a>
-                                    </li>
-                                {% endif %}
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                    <li class="page-item {% if not classes.has_next %} disabled {% endif %}">
-                        {% if query_user %}
-                            <a class="page-link" href='{% if classes.has_next %}?search={{query_user}}&amp;page={{classes.next_page_number}}{% endif %}' aria-label="Next">Next &rsaquo;</a>
-                        {% else %}
-                            <a class="page-link" href='{% if classes.has_next %}?page={{classes.next_page_number}}{% endif %}' aria-label="Next">Next &rsaquo;</a>
-                        {% endif %}
-                    </li>
-                    <li class="page-item {% if not classes.has_next %} disabled {% endif %}">
-                        {% if query_user %}
-                            <a class="page-link" href='{% if classes.has_next %}?search={{query_user}}&amp;page={{classes.paginator.num_pages}}{% endif %}' aria-label="Last">Last &raquo;</a>
-                        {% else %}
-                            <a class="page-link" href='{% if classes.has_next %}?page={{classes.paginator.num_pages}}{% endif %}' aria-label="Last">Last &raquo;</a>
-                        {% endif %}
-                    </li>
-                </ul>
-            </div>
-        {% endif %}
+        {% include 'seumich/paginated_list.html' %}
     </div>
 
 {% endblock %}
