--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -62,64 +62,6 @@
         </tbody>
     </table>
 
-    {% if students.paginator.num_pages > 1 %}
-    <div class="text-center">
-        <ul class="pagination">
-            <li class="page-item {% if not students.has_previous %} disabled {% endif %}">
-                {% if query_user %}
-                    <a class="page-link" href='{% if students.has_previous %}?search={{query_user}}&amp;page=1{% endif %}' aria-label="First">&laquo; First</a>
-                {% else %}
-                    <a class="page-link" href='{% if students.has_previous %}?page=1{% endif %}' aria-label="First">&laquo; First</a>
-                {% endif %}
-            </li>
-            <li class="page-item {% if not students.has_previous %} disabled {% endif %}">
-                {% if query_user %}
-                    <a class="page-link" href='{% if students.has_previous %}?search={{query_user}}&amp;page={{students.previous_page_number}}{% endif %}' aria-label="Previous">&lsaquo; Previous</a>
-                {% else %}
-                    <a class="page-link" href='{% if students.has_previous %}?page={{students.previous_page_number}}{% endif %}' aria-label="Previous">&lsaquo; Previous</a>
-                {% endif %}
-            </li>
-            {% for page_num in loop_times %}
-                {% if page_num == students.number %}
-                    {% if query_user %}
-                        <li class="page-item active">
-                            <a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a>
-                        </li>
-                    {% else %}
-                        <li class="page-item active">
-                            <a class="page-link" href='?page={{page_num}}'>{{page_num}}</a>
-                        </li>
-                    {% endif %}
-                {% else %}
-                    {% if page_num <= students.paginator.num_pages %}
-                        {% if query_user %}
-                            <li class="page-item">
-                                <a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a>
-                            </li>
-                        {% else %}
-                            <li class="page-item">
-                                <a class="page-link" href='?page={{page_num}}'>{{page_num}}</a>
-                            </li>
-                        {% endif %}
-                    {% endif %}
-                {% endif %}
-            {% endfor %}
-            <li class="page-item {% if not students.has_next %} disabled {% endif %}">
-                {% if query_user %}
-                    <a class="page-link" href='{% if students.has_next %}?search={{query_user}}&amp;page={{students.next_page_number}}{% endif %}' aria-label="Next">Next &rsaquo;</a>
-                {% else %}
-                    <a class="page-link" href='{% if students.has_next %}?page={{students.next_page_number}}{% endif %}' aria-label="Next">Next &rsaquo;</a>
-                {% endif %}
-            </li>
-            <li class="page-item {% if not students.has_next %} disabled {% endif %}">
-                {% if query_user %}
-                    <a class="page-link" href='{% if students.has_next %}?search={{query_user}}&amp;page={{students.paginator.num_pages}}{% endif %}' aria-label="Last">Last &raquo;</a>
-                {% else %}
-                    <a class="page-link" href='{% if students.has_next %}?page={{students.paginator.num_pages}}{% endif %}' aria-label="Last">Last &raquo;</a>
-                {% endif %}
-            </li>
-        </ul>
-    </div>
-    {% endif %}
+    {% include 'seumich/paginated_list.html' %}
 
 </div>
