--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -36,8 +36,8 @@
                     <td>
                         {% for classSite in student.class_sites.all %}
                             <a href="/students/{{student.username}}/class_sites/{{classSite.code}}/" class="class-site-status-link">
-                                <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text:classSite }}" data-placement="bottom">
-                                    {% with status=student.studentclasssitestatus_set.all|get_student_class_status:classSite %}
+                                {% with status=student.studentclasssitestatus_set.all|get_student_class_status:classSite %}
+                                <span data-toggle="tooltip" title="{{ status|status_to_text:classSite }}" data-placement="bottom">
                                     {% if status == 'Green' %}
                                         <img src="{% static 'images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
                                     {% elif status == 'Yellow' %}
@@ -47,8 +47,8 @@
                                     {% elif status == 'Not Applicable' %}
                                         <img src="{% static 'images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
                                     {% endif %}
-                                    {% endwith %}
                                 </span>
+                                {% endwith %}
                             </a>
                         {% endfor %}
                     </td>
