--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -89,15 +89,13 @@
                                             </div>
                                         </div>
                                         {% endwith %}
-                                        {% with class_score=classSite.classsitescore_set.all|get_class_score %}
                                         <div class="average-bar-container">
                                             <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ classSite.classsitescore_set.all|get_class_score }}%;">
                                                 <p class="average-bar-text">{{ class_score }}%</p>
                                                 <span class="sr-only">Class Average Percentage:
-                                                    {{ class_score }}%</span>
+                                                    {{ classSite.classsitescore_set.all|get_class_score }}%</span>
                                             </div>
                                         </div>
-                                        {% endwith %}
                                     </div>
                                 </div>
                             {% endfor %}
