--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -90,8 +90,8 @@
                                         </div>
                                         {% endwith %}
                                         <div class="average-bar-container">
-                                            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ classSite.classsitescore_set.all|get_class_score }}%;">
-                                                <p class="average-bar-text">{{ class_score }}%</p>
+                                            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ classSite.classsitescore_set.all|get_class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ classSite.classsitescore_set.all|get_class_score }}%;">
+                                                <p class="average-bar-text">{{ classSite.classsitescore_set.all|get_class_score }}%</p>
                                                 <span class="sr-only">Class Average Percentage:
                                                     {{ classSite.classsitescore_set.all|get_class_score }}%</span>
                                             </div>
