Fix course summary bars
- Add new data to fixture to test for score values greater than 100
- Add a template tag to get correct widths for summary bars

--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -74,26 +74,29 @@
                                         </span>
                                     </div>
                                     <div class="col-md-8">
+                                        {% with student_score=student.studentclasssitescore_set.all|get_student_score:classSite class_score=classSite.classsitescore_set.all|get_class_score %}
+                                        {% get_bar_widths student_score class_score as widths %}
                                         <div class="average-bar-container">
                                             <div
                                                 class="average-bar student-average-bar"
                                                 role="progressbar"
-                                                aria-valuenow="{{ student.studentclasssitescore_set.all|get_student_score:classSite }}"
+                                                aria-valuenow="{{ student_score }}"
                                                 aria-valuemin="0"
                                                 aria-valuemax="100"
-                                                style="width: {{ student.studentclasssitescore_set.all|get_student_score:classSite }}%;">
-                                                <p class="average-bar-text">{{ student.studentclasssitescore_set.all|get_student_score:classSite }}%</p>
+                                                style="width: {{ widths.student_score }}%;">
+                                                <p class="average-bar-text">{{ student_score }}%</p>
                                                 <span class="sr-only">Student Percentage:
-                                                    {{ student.studentclasssitescore_set.all|get_student_score:classSite }}%</span>
+                                                    {{ student_score }}%</span>
                                             </div>
                                         </div>
                                         <div class="average-bar-container">
-                                            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ classSite.classsitescore_set.all|get_class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ classSite.classsitescore_set.all|get_class_score }}%;">
-                                                <p class="average-bar-text">{{ classSite.classsitescore_set.all|get_class_score }}%</p>
+                                            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ widths.class_score }}%;">
+                                                <p class="average-bar-text">{{ class_score }}%</p>
                                                 <span class="sr-only">Class Average Percentage:
-                                                    {{ classSite.classsitescore_set.all|get_class_score }}%</span>
+                                                    {{ class_score }}%</span>
                                             </div>
                                         </div>
+                                        {% endwith %}
                                     </div>
                                 </div>
                             {% endfor %}
