--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -75,7 +75,6 @@
                                     </div>
                                     <div class="col-md-8">
                                         {% with student_score=student.studentclasssitescore_set.all|get_student_score:classSite class_score=classSite.classsitescore_set.all|get_class_score %}
-                                        {% get_bar_widths student_score class_score as widths %}
                                         <div class="average-bar-container">
                                             <div
                                                 class="average-bar student-average-bar"
@@ -83,14 +82,14 @@
                                                 aria-valuenow="{{ student_score }}"
                                                 aria-valuemin="0"
                                                 aria-valuemax="100"
-                                                style="width: {{ widths.student_score }}%;">
+                                                style="width: {{ student_score|get_bar_width:class_score }}%;">
                                                 <p class="average-bar-text">{{ student_score }}%</p>
                                                 <span class="sr-only">Student Percentage:
                                                     {{ student_score }}%</span>
                                             </div>
                                         </div>
                                         <div class="average-bar-container">
-                                            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ widths.class_score }}%;">
+                                            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ class_score|get_bar_width:student_score }}%;">
                                                 <p class="average-bar-text">{{ class_score }}%</p>
                                                 <span class="sr-only">Class Average Percentage:
                                                     {{ class_score }}%</span>
