Fix cohort bug + Add Django Debug Toolbar instructions
- Add instructions in README to allow use of Django Debug Toolbar in Development
- Fix cohort error - it was display queryset in tooltip instead of cohort text -> Fixed this

--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -112,7 +112,7 @@
                     <p class="advisor-names">
                         <a href="/advisors/{{advisor.username}}/">{{ advisor.first_name }}
                             {{ advisor.last_name }}</a>
-                        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="{{ advisor.cohort }}" data-toggle="tooltip" data-placement="bottom" tooltip></span>
+                        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="{{ advisor.cohort.0.cohort }}" data-toggle="tooltip" data-placement="bottom" tooltip></span>
                     </p>
                 {% endfor %}
             </div>
