--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -110,9 +110,9 @@
                 </strong>
                 {% for advisor in advisors %}
                     <p class="advisor-names">
-                        <a href="/advisors/{{advisor.username}}/">{{ advisor.first_name }}
-                            {{ advisor.last_name }}</a>
-                        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="{{ advisor.cohort.0.cohort }}" data-toggle="tooltip" data-placement="bottom" tooltip></span>
+                        <a href="/advisors/{{advisor.username}}/">{{ advisor.mentor.first_name }}
+                            {{ advisor.mentor.last_name }}</a>
+                        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="{{ advisor.cohort }}" data-toggle="tooltip" data-placement="bottom" tooltip></span>
                     </p>
                 {% endfor %}
             </div>
