--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -34,20 +34,26 @@
                     </th>
                     <td class="hide-small">{{ student.univ_id }}</td>
                     <td>
-                        {% for classSite in student.class_sites.all %}
-                            <a href="/students/{{student.username}}/class_sites/{{classSite.code}}/" class="class-site-status-link">
-                                {% with status=student.studentclasssitestatus_set.all|get_student_class_status:classSite %}
-                                <span data-toggle="tooltip" title="{{ status|status_to_text:classSite }}" data-placement="bottom">
-                                    {% if status == 'Green' %}
+                        {% for classSite in student.studentclasssitestatus_set.all %}
+                            <a href="/students/{{student.username}}/class_sites/{{classSite.class_site.code}}/" class="class-site-status-link">
+                                {% with status=classSite.status.description %}
+                                {% if status == 'Green' %}
+                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Encourage" data-placement="bottom">
                                         <img src="{% static 'images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
-                                    {% elif status == 'Yellow' %}
+                                    </span>
+                                {% elif status == 'Yellow' %}
+                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Explore" data-placement="bottom">
                                         <img src="{% static 'images/Status_Icons_Yellow.png' %}" alt="Yellow explore status icon" width="25px" hspace="3"></img>
-                                    {% elif status == 'Red' %}
+                                    </span>
+                                {% elif status == 'Red' %}
+                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Engage" data-placement="bottom">
                                         <img src="{% static 'images/Status_Icons_Red.png' %}" alt="Red engage status icon" width="25px" hspace="3"></img>
-                                    {% elif status == 'Not Applicable' %}
+                                    </span>
+                                {% elif status == 'Not Applicable' %}
+                                    <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: No data" data-placement="bottom">
                                         <img src="{% static 'images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
-                                    {% endif %}
-                                </span>
+                                    </span>
+                                {% endif %}
                                 {% endwith %}
                             </a>
                         {% endfor %}
