--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -19,7 +19,7 @@
             <hr class="main-no-margin-top"/>
             <div class="student-detail-summary-content">
                 <div>
-                    {% if not classSites %}
+                    {% if not student %}
                         <div>
                             <p>There is no class site data for this student.</p>
                         </div>
@@ -50,39 +50,39 @@
                             </div>
                         </div>
                         <div class="container-fluid">
-                            {% for classSite in classSites %}
+                            {% for classSite in student.studentclasssitestatus_set.all %}
                                 <hr class="main-no-margin-top hide-small-grid"/>
                                 <div class="row student-desc">
                                     <div class="col-md-2 mobile-inline">
-                                        <a class="class-site-title" href="/students/{{student.username}}/class_sites/{{classSite.code}}/">
-                                            <h3 class="student-course-list">{{ classSite.description }}</h3>
+                                        <a class="class-site-title" href="/students/{{student.username}}/class_sites/{{classSite.class_site.code}}/">
+                                            <h3 class="student-course-list">{{ classSite.class_site.description }}</h3>
                                         </a>
                                     </div>
                                     <div class="col-md-2 mobile-inline status-icon">
-                                        {% with status=student.studentclasssitestatus_set.all|get_student_class_status:classSite %}
-                                        <span data-toggle="tooltip" title="{{ status|status_to_text }}" data-placement="bottom">
-                                            {% if status == 'Green' %}
-                                                <img src="{{ baseUrl }}images/Status_Icons_Green.png" alt="Green encourage status icon" width="25px" hspace="3"></img>
-                                            {% elif status == 'Yellow' %}
-                                                <img src="{{ baseUrl }}images/Status_Icons_Yellow.png" alt="Yellow explore status icon" width="25px" hspace="3"></img>
-                                            {% elif status == 'Red' %}
-                                                <img src="{{ baseUrl }}images/Status_Icons_Red.png" alt="Red engage status icon" width="25px" hspace="3"></img>
-                                            {% elif status == 'Not Applicable' %}
-                                                <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" alt="no status available for this course icon" width="25px" hspace="3"></img>
-                                            {% endif %}
-                                        </span>
+                                        {% with status=classSite.status.description %}
+                                        {% if status == 'Green' %}
+                                            <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Encourage" data-placement="bottom">
+                                                <img src="{% static 'images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
+                                            </span>
+                                        {% elif status == 'Yellow' %}
+                                            <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Explore" data-placement="bottom">
+                                                <img src="{% static 'images/Status_Icons_Yellow.png' %}" alt="Yellow explore status icon" width="25px" hspace="3"></img>
+                                            </span>
+                                        {% elif status == 'Red' %}
+                                            <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: Engage" data-placement="bottom">
+                                                <img src="{% static 'images/Status_Icons_Red.png' %}" alt="Red engage status icon" width="25px" hspace="3"></img>
+                                            </span>
+                                        {% elif status == 'Not Applicable' %}
+                                            <span data-toggle="tooltip" title="{{ classSite.class_site.description }}: No data" data-placement="bottom">
+                                                <img src="{% static 'images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
+                                            </span>
+                                        {% endif %}
                                         {% endwith %}
                                     </div>
                                     <div class="col-md-8">
-                                        {% with student_score=student.studentclasssitescore_set.all|get_student_score:classSite class_score=classSite.classsitescore_set.all|get_class_score %}
+                                        {% with student_score=classSite.class_site.studentclasssitescore_set.all|get_score class_score=classSite.class_site.classsitescore_set.all|get_score %}
                                         <div class="average-bar-container">
-                                            <div
-                                                class="average-bar student-average-bar"
-                                                role="progressbar"
-                                                aria-valuenow="{{ student_score }}"
-                                                aria-valuemin="0"
-                                                aria-valuemax="100"
-                                                style="width: {{ student_score|get_bar_width:class_score }}%;">
+                                            <div class="average-bar student-average-bar" role="progressbar" aria-valuenow="{{ student_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ student_score|get_bar_width:class_score }}%;">
                                                 <p class="average-bar-text">{{ student_score }}%</p>
                                                 <span class="sr-only">Student Percentage:
                                                     {{ student_score }}%</span>
